ensure nav is visible on palm

--- a/sass/custom/objects/_nav.scss
+++ b/sass/custom/objects/_nav.scss
@@ -104,6 +104,7 @@
         display: block;
         position: relative;
         border: 0;
+				opacity: 1;
       }
 
       & a {
